--- a/client/index.html
+++ b/client/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ProteinWeaver</title>
+    <link rel="icon" type="image/x-icon" href="./src/assets/logo.svg">
   </head>
   <body>
     <div id="root"></div>
